--- a/setup.cfg
+++ b/setup.cfg
@@ -62,6 +62,7 @@ install_requires =
     libusb-package>=1.0,<2.0
     natsort>=8.0.0,<9.0
     prettytable>=2.0,<4.0
+    prompt_toolkit>=3.0,<4.0
     pyelftools<1.0
     pylink-square>=1.0,<2.0
     pyusb>=1.2.1,<2.0
